# ChangeLog for games-fps/darkplaces
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  -darkplaces-20080311_beta1.ebuild:
  Removed previous beta

  03 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  +darkplaces-20080324_beta3.ebuild:
  Version bump.

  18 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  +darkplaces-20080311_beta1.ebuild:
  Newest beta added, with some small ebuild changes.

  13 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> -darkplaces-20070412.ebuild,
  +darkplaces-20070927.ebuild:
  Version bump, thanks to Paul Bredbury (bug #140074)
