@@ -1,8 +1,10 @@
 DIST darkplacesengine20070927.zip 7983079 RMD160 0fd091fbc96de79250733e2dbb1f8f6329c62704 SHA1 e735af4b6776143b0a8db3fc13d77764a5e6a2d3 SHA256 265d52ab046bdd0e9a6be9b632858739fef7937244059d3e94b080a1fa917fd0
 DIST darkplacesengine20080324beta3.zip 8199074 RMD160 02b8cde4195154bf2e18787c0a2f2a3b1d752ba3 SHA1 054dfbc41210ee3e60395e40b12643f05c2ab162 SHA256 146dbd996a06b933f51261656804bc83f09c427041e0ef9e6168802ddd3664c0
+DIST darkplacesengine20080406beta1.zip 8200224 RMD160 38ee66ff48ba86455174efcf5f540d09d665aa09 SHA1 915a25d977abfb8066b7e0f34e71a150cdc02dd6 SHA256 8a32e0d954b35049e6680b9ca1fb791b3c4d19e33e60fba410dee0fecf25e334
 DIST fuhquake-lits.rar 8388829 RMD160 574937680f7354362088f2ec63d8941f0f4b0981 SHA1 1e9199c8ac7c9162e43c621487b712551711a45e SHA256 066fd58e2a6d157a1aa7925334d7e3e6cffa7f5c556e707bc31da8bfecea873c
 DIST id1.pk3 350470 RMD160 ac1633c56ca27ae3175e15305ce5d0e829daa43c SHA1 f83c25b74f666665369783b0f08949d480b382a8 SHA256 f1ee6e144d1942ebf91a8c71d0333eac94c73efae35377fbe7ae43e0e4ab37dc
 EBUILD darkplaces-20070927.ebuild 4995 RMD160 35f4b943d2ae331224780f2a0481ffd3defcea51 SHA1 977567cf3e96be51a7cdc1da71ce533de513d995 SHA256 a559ae8ceea0bf52619e3dd6534b5cce3adcbfab5ba0d90b7769bd1c8b4db42b
 EBUILD darkplaces-20080324_beta3.ebuild 5027 RMD160 3295f53204dcb31e1a89349ea199dc61b1ad4712 SHA1 4d794b9227b0bcf98393e5761de04f4befff1a01 SHA256 50559a6ab4fce536d4d8f0d270ce6079d023adf7eacdaf0b18920f3f0c7817ea
+EBUILD darkplaces-20080406_beta1.ebuild 5027 RMD160 3295f53204dcb31e1a89349ea199dc61b1ad4712 SHA1 4d794b9227b0bcf98393e5761de04f4befff1a01 SHA256 50559a6ab4fce536d4d8f0d270ce6079d023adf7eacdaf0b18920f3f0c7817ea
 EBUILD darkplaces-9999.ebuild 5089 RMD160 1c50f253b58a1bc287b3936012797fc2653323ad SHA1 ab0717034268bd91232d4db9e28d315f77624508 SHA256 113fb39c0ba7b98830e12d47b489fbb3f3af934a72ee62f8874903aa95a9fb2c
 MISC ChangeLog 635 RMD160 c3640bbbc44a2a4f63b01de783b7da7f3952c243 SHA1 1574d39f67121edea4314d927846728acebde78f SHA256 36ff53787d7eda374f98983f0dc163e58fc4372da181b8c5ae892a8fd8165833
