@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl>
+  +darkplaces-20080406_beta1.ebuild:
+  Version bump.
+
   07 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl>
   -darkplaces-20080311_beta1.ebuild:
   Removed previous beta
